页面逻辑初步开发完成

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "drizzle-kit": "^0.31.1",
     "drizzle-orm": "^0.45.1",
     "jose": "^6.0.11",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.511.0",
     "next": "15.6.0-canary.59",
     "next-intl": "^4.7.0",
